[workspace]
resolver = "2"
members = ["git-cliff-core", "git-cliff"]

[workspace.dependencies]
regex = "1.11.1"
glob = "0.3.2"
log = "0.4.21"
secrecy = { version = "0.8.0", features = ["serde"] }
lazy_static = "1.5.0"
dirs = "5.0.1"
url = "2.5.3"
reqwest = { version = "0.12.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "rustls-tls-native-roots",
  "json",
  "zstd",
] }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = true # used by the profiler
strip = false # keep symbols for the profiler

[workspace.lints.clippy]
literal_string_with_formatting_args = "allow"
tabs_in_doc_comments = "allow"
needless_raw_string_hashes = "allow"
unreadable_literal = "allow"
redundant_else = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"
uninlined_format_args = "allow"
manual_string_new = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"
missing_panics_doc = "allow"
inefficient_to_string = "allow"
redundant_closure_for_method_calls = "allow"
map_unwrap_or = "allow"
struct_excessive_bools = "allow"
unnecessary_wraps = "allow"
