[workspace]
resolver = "2"
members = ["git-cliff-core", "git-cliff"]

[workspace.dependencies]
regex = "1.11.1"
glob = "0.3.2"
log = "0.4.21"
secrecy = { version = "0.8.0", features = ["serde"] }
dirs = "6.0.0"
url = "2.5.3"
reqwest = { version = "0.12.25", default-features = false, features = [
  "blocking",
  "rustls-tls",
  "rustls-tls-native-roots",
  "json",
  "zstd",
] }

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = true # used by the profiler
strip = false # keep symbols for the profiler

[workspace.lints.clippy]
# NOTE:
# `clippy` is intentionally not configured at the workspace level.
# CLI arguments take precedence over this configuration, which can
# lead to confusing behavior.
