[package]
name = "git-cliff-core"
version = "2.10.1" # managed by release.sh
description = "Core library of git-cliff"
authors = ["git-cliff contributors <git-cliff@protonmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/orhun/git-cliff"
repository = "https://github.com/orhun/git-cliff"
keywords = ["changelog", "generator", "conventional", "commit"]
edition = "2024"
rust-version = "1.85.1"

[features]
default = ["repo"]
## Enable parsing commits from a git repository.
## You can turn this off if you already have the commits to put in the
## changelog and you don't need `git-cliff` to parse them.
repo = ["dep:git2", "dep:indexmap"]
# Enable integration with remote repositories.
remote = [
  "dep:reqwest",
  "dep:http-cache-reqwest",
  "dep:reqwest-middleware",
  "dep:tokio",
  "dep:futures",
]
## Enable integration with GitHub.
## You can turn this off if you don't use GitHub and don't want
## to make network requests to the GitHub API.
github = ["remote"]
## Enable integration with GitLab.
## You can turn this off if you don't use GitLab and don't want
## to make network requests to the GitLab API.
gitlab = ["remote"]
## Enable integration with Bitbucket.
## You can turn this off if you don't use Bitbucket and don't want
## to make network requests to the Bitbucket API.
bitbucket = ["remote"]
## Enable integration with Gitea.
## You can turn this off if you don't use Gitea and don't want
## to make network requests to the Gitea API.
gitea = ["remote"]

[dependencies]
glob.workspace = true
regex.workspace = true
log.workspace = true
secrecy.workspace = true
dirs.workspace = true
lazy_static.workspace = true
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
bincode = "2.0.1"
serde_regex = "1.1.0"
tera = "1.20.0"
indexmap = { version = "2.10.0", optional = true }
toml = "0.9.2"
lazy-regex = "3.4.1"
next_version = "0.2.24"
semver = "1.0.26"
document-features = { version = "0.2.11", optional = true }
reqwest = { workspace = true, optional = true }
http-cache-reqwest = { version = "0.15.0", optional = true }
reqwest-middleware = { version = "0.4.0", optional = true }
tokio = { version = "1.47.0", features = [
  "rt-multi-thread",
  "macros",
], optional = true }
futures = { version = "0.3.31", optional = true }
url.workspace = true
dyn-clone = "1.0.17"
urlencoding = "2.1.3"
cacache = { version = "=13.0.0", features = ["mmap"], default-features = false }
time = "0.3.37"
chrono = { version = "0.4.41", features = ["serde"] }

[dependencies.git2]
version = "0.20.2"
default-features = false
optional = true

[dependencies.config]
version = "0.15.13"
default-features = false
features = ["toml", "yaml"]

[dependencies.git-conventional]
version = "0.12.7"
features = ["serde"]

[dependencies.rust-embed]
version = "8.7.2"
features = ["debug-embed", "compression"]

[dev-dependencies]
pretty_assertions = "1.4.1"
expect-test = "1.5.1"
temp-dir = "0.1.16"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
