[package]
name = "git-cliff-core"
version = "2.12.0" # managed by release.sh
description = "Core library of git-cliff"
authors = ["git-cliff contributors <git-cliff@protonmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/orhun/git-cliff"
repository = "https://github.com/orhun/git-cliff"
keywords = ["changelog", "generator", "conventional", "commit"]
edition = "2024"
rust-version = "1.85.1"

[features]
default = ["repo"]
## Enable parsing commits from a git repository.
## You can turn this off if you already have the commits to put in the
## changelog and you don't need `git-cliff` to parse them.
repo = ["dep:git2"]
# Enable integration with remote repositories.
remote = [
  "dep:reqwest",
  "dep:http-cache-reqwest",
  "dep:reqwest-middleware",
  "dep:tokio",
  "dep:futures",
  "dep:async-stream",
]
## Enable integration with GitHub.
## You can turn this off if you don't use GitHub and don't want
## to make network requests to the GitHub API.
github = ["remote"]
## Enable integration with GitLab.
## You can turn this off if you don't use GitLab and don't want
## to make network requests to the GitLab API.
gitlab = ["remote"]
## Enable integration with Bitbucket.
## You can turn this off if you don't use Bitbucket and don't want
## to make network requests to the Bitbucket API.
bitbucket = ["remote"]
## Enable integration with Gitea.
## You can turn this off if you don't use Gitea and don't want
## to make network requests to the Gitea API.
gitea = ["remote"]
## Enable integration with Azure DevOps.
## You can turn this off if you don't use Azure DevOps and don't want
## to make network requests to the Azure DevOps API.
azure_devops = ["remote"]

[dependencies]
glob.workspace = true
regex.workspace = true
log.workspace = true
secrecy.workspace = true
dirs.workspace = true
lazy_static.workspace = true
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"
serde_regex = "1.1.0"
tera = "1.20.1"
indexmap = { version = "2.13.0", features = ["serde"] }
toml = "0.9.8"
lazy-regex = "3.6.0"
next_version = "0.2.26"
semver = "1.0.27"
document-features = { version = "0.2.12", optional = true }
reqwest = { workspace = true, optional = true }
http-cache-reqwest = { version = "0.15.0", optional = true }
reqwest-middleware = { version = "0.4.0", optional = true }
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "macros",
], optional = true }
futures = { version = "0.3.31", optional = true }
async-stream = { version = "0.3.6", optional = true }
url.workspace = true
dyn-clone = "1.0.17"
urlencoding = "2.1.3"
# `tokio-runtime` is already enabled transitively by the CLI. This just avoids runtime-less build failures.
# See: https://github.com/zkat/cacache-rs/issues/92
cacache = { version = "13.1.0", features = ["mmap", "tokio-runtime"], default-features = false }
time = "0.3.44"
chrono = { version = "0.4.41", features = ["serde"] }

[dependencies.git2]
version = "0.20.3"
default-features = false
optional = true

[dependencies.config]
version = "0.15.19"
default-features = false
features = ["toml", "yaml"]

[dependencies.git-conventional]
version = "0.12.7"
features = ["serde"]

[dependencies.rust-embed]
version = "8.11.0"
features = ["debug-embed", "compression"]

[dev-dependencies]
pretty_assertions = "1.4.1"
expect-test = "1.5.1"
temp-dir = "0.1.16"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
