[package]
name = "git-cliff"
version = "2.12.0" # managed by release.sh
description = "A highly customizable changelog generator ⛰️"
authors = ["git-cliff contributors <git-cliff@protonmail.com>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/orhun/git-cliff"
repository = "https://github.com/orhun/git-cliff"
keywords = ["changelog", "generator", "conventional", "commit"]
categories = ["command-line-utilities"]
default-run = "git-cliff"
edition = "2024"
rust-version = "1.85.1"

[[bin]]
name = "git-cliff-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "git-cliff-mangen"
path = "src/bin/mangen.rs"

[features]
# check for new versions
default = ["update-informer", "integrations"]
# enable all integrations
integrations = ["github", "gitlab", "gitea", "bitbucket", "azure_devops"]
# inform about new releases
update-informer = ["dep:update-informer"]
# enable remote repository integration
remote = ["dep:indicatif", "dep:reqwest"]
# enable GitHub integration
github = ["remote", "git-cliff-core/github"]
# enable GitLab integration
gitlab = ["remote", "git-cliff-core/gitlab"]
# enable Gitea integration
gitea = ["remote", "git-cliff-core/gitea"]
# enable Bitbucket integration
bitbucket = ["remote", "git-cliff-core/bitbucket"]
# enable Azure DevOps integration
azure_devops = ["remote", "git-cliff-core/azure_devops"]
# performance profiler
profiler = ["dep:pprof", "dep:rand", "profiler-flamegraph"]
profiler-flamegraph = ["pprof/flamegraph"]

[dependencies]
glob.workspace = true
regex.workspace = true
log.workspace = true
secrecy.workspace = true
lazy_static.workspace = true
dirs.workspace = true
clap = { version = "4.5.53", features = ["derive", "env", "wrap_help", "cargo"] }
clap_complete = "4.5.61"
clap_mangen = "0.2.31"
shellexpand = "3.1.0"
update-informer = { version = "1.3.0", optional = true }
indicatif = { version = "0.18.3", optional = true }
pprof = { version = "0.15.0", optional = true }
rand = { version = "0.9.2", optional = true }
reqwest = { workspace = true, optional = true }
url.workspace = true
pathdiff = "0.2.3"
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-indicatif = "0.3.14"
owo-colors = "4.2.3"

[dependencies.git-cliff-core]
version = "2.12.0" # managed by release.sh
features = ["tracing"]
path = "../git-cliff-core"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true

# metadata for cargo-binstall to get the right artifacts
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/git-cliff", dest = "/usr/bin/git-cliff", mode = "755" },
  { source = "LICENSE-MIT", dest = "/usr/share/doc/git-cliff/LICENSE-MIT", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/git-cliff/README.md", mode = "644" },
  { source = "man/git-cliff.1", dest = "/usr/share/man/man1/git-cliff.1", mode = "644", doc = true },
  { source = "completions/git-cliff.bash", dest = "/usr/share/bash-completion/completions/git-cliff", mode = "644" },
  { source = "completions/git-cliff.fish", dest = "/usr/share/fish/vendor_completions.d/git-cliff.fish", mode = "644" },
  { source = "completions/_git-cliff", dest = "/usr/share/zsh/vendor-completions/", mode = "644" },
]

[package.metadata.deb]
assets = [
  [
    "target/release/git-cliff",
    "usr/bin/",
    "755",
  ],
  [
    "../LICENSE-MIT",
    "/usr/share/doc/git-cliff/LICENSE-MIT",
    "644",
  ],
  [
    "../README.md",
    "usr/share/doc/git-cliff/README",
    "644",
  ],
  [
    "../man/git-cliff.1",
    "/usr/share/man/man1/git-cliff.1",
    "644",
  ],
  [
    "../completions/git-cliff.bash",
    "/usr/share/bash-completion/completions/git-cliff",
    "644",
  ],
  [
    "../completions/git-cliff.fish",
    "/usr/share/fish/vendor_completions.d/git-cliff.fish",
    "644",
  ],
  [
    "../completions/_git-cliff",
    "/usr/share/zsh/vendor-completions/",
    "644",
  ],
]
