[package]
name = "gitolith-core"
version = "0.1.0"
description = ""
authors = ["gitolith contributors <gitolith@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/gitolith/gitolith/blob/master/README.md"
homepage = "https://github.com/gitolith/gitolith"
repository = "https://github.com/gitolith/gitolith"
keywords = []
categories = []
edition = "2018"

[dependencies]
thiserror = "1.0"
git2 = "0.13"
git-conventional = "0.9.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]
