[package]
name = "gitolith-core"
version = "0.1.0"
description = ""
authors = ["gitolith contributors <gitolith@protonmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/gitolith/gitolith/blob/master/README.md"
homepage = "https://github.com/gitolith/gitolith"
repository = "https://github.com/gitolith/gitolith"
keywords = []
categories = []
edition = "2018"

[dependencies]
thiserror = "1.0"
git2 = "0.13"
serde = "1.0"
serde_derive = "1.0"
tera = "1.9.0"
regex = "1.5.4"

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]

[dev-dependencies]
pretty_assertions = "0.7"

[dependencies.git-conventional]
git = "https://github.com/orhun/git-conventional"
branch = "no_bitvec"
features = ["serde"]
